Implemented beginnings of a Vulkan renderer
I essentialy did all of the setup and initialization framework here, including queuefamily indices, choosing a physical device, setting up a rendering device, and probably a few other things.

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -3,6 +3,25 @@
 #
 # Build configuration for the Nightbloom Engine library
 #------------------------------------------------------------------------------
+
+# Manual Vulkan setup (ADD THIS SECTION AT THE TOP)
+set(VULKAN_SDK_PATH "C:/VulkanSDK/1.4.321.1")
+set(VULKAN_INCLUDE_DIR "${VULKAN_SDK_PATH}/Include")
+set(VULKAN_LIBRARY "${VULKAN_SDK_PATH}/Lib/vulkan-1.lib")
+
+# Verify Vulkan files exist
+if(NOT EXISTS ${VULKAN_INCLUDE_DIR}/vulkan/vulkan.h)
+    message(FATAL_ERROR "Vulkan headers not found at: ${VULKAN_INCLUDE_DIR}")
+endif()
+
+if(NOT EXISTS ${VULKAN_LIBRARY})
+    message(FATAL_ERROR "Vulkan library not found at: ${VULKAN_LIBRARY}")
+endif()
+
+message(STATUS "Using manual Vulkan setup:")
+message(STATUS "  Include: ${VULKAN_INCLUDE_DIR}")
+message(STATUS "  Library: ${VULKAN_LIBRARY}")
+
 # Gather source files
 file(GLOB_RECURSE ENGINE_SOURCES 
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
@@ -17,14 +36,17 @@ list(REMOVE_ITEM ENGINE_SOURCES ${TEST_SOURCES})
 add_library(NightbloomEngine STATIC ${ENGINE_SOURCES})
 # Create alias for cleaner usage
 add_library(Nightbloom::Engine ALIAS NightbloomEngine)
-# Set include directories
+
+# Set include directories (UPDATED - ADD VULKAN)
 target_include_directories(NightbloomEngine 
     PUBLIC 
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
         $<INSTALL_INTERFACE:include>
+        ${VULKAN_INCLUDE_DIR}
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
 # Platform-specific sources and definitions
 if(WIN32)
     target_compile_definitions(NightbloomEngine PUBLIC NIGHTBLOOM_PLATFORM_WINDOWS)
@@ -34,15 +56,17 @@ elseif(UNIX AND NOT APPLE)
 elseif(APPLE)
     target_compile_definitions(NightbloomEngine PUBLIC NIGHTBLOOM_PLATFORM_MACOS)
 endif()
-# Link libraries
+
+# Link libraries (UPDATED - ADD VULKAN)
 target_link_libraries(NightbloomEngine
     PUBLIC
-        # Future: Vulkan, etc.
+        ${VULKAN_LIBRARY}
     PRIVATE
         # Platform libraries
         $<$<PLATFORM_ID:Windows>:user32.lib>
         $<$<PLATFORM_ID:Windows>:gdi32.lib>
 )
+
 # Precompiled headers
 # target_precompile_headers(NightbloomEngine PRIVATE
 #     <vector>
